# the-bespoke-game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  server-config.toml
assets/textures/: elf_m_idle.png~
client/: CMakeLists.txt  IO_file.h  default-settings.json  main_sdl.cpp  main_windows.cpp  main_windows.h  networking_client.h  window_process_windows.cpp
core/: CMakeLists.txt  connection-type-list.h  connection.proto  console_server.h  core.cpp  core.h  entity.h  generic-connection.h  input.cpp  input.h  javascript.cpp  javascript.h  payload.h  snowflake.h
core/materials/: bakedTexture.mat  baked_texture.mat
scalable-game/: CMakeLists.txt  console_imgui.h  game.cpp  game.h  main.js  main_sdl.cpp  main_windows.cpp  main_windows.h  networking_client.h  renderer_filament.h  renderer_sdl.h  sdl_system_linux.cpp  sdl_system_windows.cpp  state.proto  video_windows.cpp
server/: CMakeLists.txt  networking.h  server.cpp
web-client/: index.html  style.css
