add_executable(scaleable-game-server server.cpp)
find_package(unofficial-libuv CONFIG REQUIRED)
#find_path(uwebsockets_INCLUDE_DIR NAMES uwebsockets)
target_link_directories(scaleable-game-server PUBLIC "${uwebsockets_INCLUDE_DIR}/../lib")
target_link_libraries(scaleable-game-server core GameNetworkingSockets unofficial::libuv::libuv uSockets)
#target_include_directories(scaleable-game-server PRIVATE ${uwebsockets_INCLUDE_DIR})
add_sanitizers(scaleable-game-server)